# nota-serde

./: ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  manifest
.beads/: config.yaml  issues.jsonl  metadata.json
src/: de.rs  error.rs  lexer.rs  lib.rs  ser.rs
tests/: edge_cases.rs  example_config.rs  smoke.rs
