[package]
name         = "nota-serde"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/nota-serde"
description  = "serde Serializer + Deserializer for the nota data format"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
