[package]
name         = "nota-serde"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/nota-serde"
description  = "serde Serializer + Deserializer for the nota data format — public façade over nota-serde-core"

[dependencies]
nota-serde-core = { git = "https://github.com/LiGoldragon/nota-serde-core.git", rev = "0a7a047b51f782ac851e2d895430becf612aad33" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
